--- a/pc01/exercici01.html
+++ b/pc01/exercici01.html
@@ -11,5 +11,14 @@
         
     </div>
 
+    <button id="btn_play"> PLAY </button>
+    <button id="btn_stop"> STOP </button>
+    <button id="btn_stop"> PAUSE </button>
+
+    <select>    
+        <option value="DRUMC0.WAV" selected>DRUMC0</option>
+        <option value="FANFARE1.WAV">FANFARE1</option>
+    </select>
+
 </body>
 </html>
