--- a/pc02/exercici02_4.html
+++ b/pc02/exercici02_4.html
@@ -32,7 +32,9 @@
             <source src="DRUMC0.WAV" type="wav" >
             <source src="FANFARE1.WAV" type="wav">
         </audio>
+    </div>
 
+    <div id="controlsMusic"></div>    
         <button id="btn_play"> PLAY </button>
         <button id="btn_pause"> PAUSE </button>
         <button id="btn_stop"> STOP </button>
@@ -41,7 +43,9 @@
             <option value="DRUMC0.WAV" selected> DRUMC0 </option>
             <option value="FANFARE1.WAV"> FANFARE1 </option>
         </select>
-        
+    </div>
+
+    <div id="controlsVolum"></div>        
         <label>Volum:</label>
         <input type="range" id="inp_volum_Audio" min="0" max="1" step="0.1" value="1">
         
