--- a/pc02/exercici02_4.html
+++ b/pc02/exercici02_4.html
@@ -23,7 +23,7 @@
         <button id="aturarComptador"> ATURAR </button>
     </div>
 
-    <div id="estatComptadorMinuts">00 minuts</div>
+    <div id="estatComptadorMinuts">00 minuts i</div>
     <div id="estatComptadorSegons">00 segons</div>
 
     <div id="controlsAudio">
