--- a/pc02/exercici02.html
+++ b/pc02/exercici02.html
@@ -40,13 +40,40 @@
         <h3> Configurar Alarma </h3>      
         
         <label>Hora:</label>
-        <input type="number" id="inputHora" value="0" min="0">
+        <input type="number" id="inputHoraAlarma" value="0" min="0">
 
         <label>Minuts:</label>
         <input type="number" id="inputMinuts" value="0" min="0" max="59">
 
         <label>Segons:</label>
         <input type="number" id="inputSegons" value="0" min="0" max="59">        
+    </div>
+
+    <div id="idAudio">
+        <audio controls id="idAudio">
+            <source src="DRUMC0.WAV" type="audio/wav">
+            <source src="FANFARE1.WAV" type="audio/wav">
+        </audio>
+    </div>
+
+    <div id="controlsMusic"></div>    
+        <button id="btn_play"> PLAY </button>
+        <button id="btn_pause"> PAUSE </button>
+        <button id="btn_stop"> STOP </button>
+
+        <select>    
+            <option value="DRUMC0.WAV" selected> DRUMC0 </option>
+            <option value="FANFARE1.WAV"> FANFARE1 </option>
+        </select>
+    </div>
+
+    <div id="controlsVolum"></div>        
+        <label>Volum:</label>
+        <input type="range" id="inp_volum_Audio" min="0" max="1" step="0.1" value="1">
+        
+        <button id="btnVolumUp">Pujar Volum</button>
+        <button id="btnVolumDown">Baixar Volum</button>
+        <button id="btnMute">Silenciar</button>
     </div>
 
 </body>
