--- a/pc02/exercici02.html
+++ b/pc02/exercici02.html
@@ -35,7 +35,7 @@
     </div>
 
 
-    <div id="rellotge"> </div>
+    <div id="rellotge"> <h3>Hora actual </h3>   </div>
     
     <div id="alarma">
         <h3> Configurar Alarma </h3>      
