Rename button ID from 'btn_stop' to 'btn_pause'

--- a/pc01/exercici01.html
+++ b/pc01/exercici01.html
@@ -13,7 +13,7 @@
 
     <button id="btn_play"> PLAY </button>
     <button id="btn_stop"> STOP </button>
-    <button id="btn_stop"> PAUSE </button>
+    <button id="btn_pause"> PAUSE </button>
 
     <select>    
         <option value="DRUMC0.WAV" selected>DRUMC0</option>
