--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -9,18 +9,16 @@
     <script src="LlistaMusiques.js" defer type="module"></script>
 </head>
 <body>
-    titol: <input type="text" id="input_titol"> <br />
-    nom: <input type="text" id="input_nom"> <br />
+    titol Musica: <input type="text" id="input_titol"> <br />
+    nom arxiu: <input type="text" id="input_nom"> <br />
+    media type: <input type="text" id="input_nom"> <br /> 
+
+<!--<button id="btn_crear_musica" > CREAR </button>-->
     
-
-    minut: <input type="number" id="input_minut"> <br />
-    segon: <input type="number" id="input_segon"> <br />
-    musica: <input type="text" id="input_musica"> <br />
-
-    <button id="btn_crear_musica" > CREAR </button>
     <button onclick="afegirEtiquete()"> AFEGIR </button>
     <button onclick="eliminarEtiquete()"> ELIMINAR </button>
 
     <div id="div_llista_musiques"></div>
+
 </body>
 </html>
