--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -9,10 +9,8 @@
     <script src="LlistaMusiques.js" defer type="module"></script>
 </head>
 <body>
-    titol Musica: <input type="text" id="input_titol"> <br />
-    nom arxiu: <input type="text" id="input_nom"> <br />
-    media type: <input type="text" id="input_nom"> <br /> 
-
+    nova llista: <input type="text" id="input_nomLlista"> <br />
+    <button id="btn_crear_llista" > CREAR LLISTA</button>
 <!--<button id="btn_crear_musica" > CREAR </button>-->
     
     <button onclick="afegirEtiquete()"> AFEGIR </button>
