listado musicas mostrado

--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reproductor</title>
     <script src="reproductor.js" defer type="module"></script>
-    <script src="Musica.js" defer type="module"></script>
-    <script src="LlistaMusiques.js" defer type="module"></script>
+    <!-- <script src="Musica.js" defer type="module"></script>
+    <script src="LlistaMusiques.js" defer type="module"></script> -->
 </head>
 <body>
     nova llista: <input type="text" id="input_nomLlista"> <br />
