codigo que falta

--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reproductor</title>
     <script src="reproductor.js" defer type="module"></script>
-    <!-- <script src="Musica.js" defer type="module"></script>
-    <script src="LlistaMusiques.js" defer type="module"></script> -->
 </head>
 <body>
     nova llista: <input type="text" id="input_nomLlista"> <br />
-    <button id="btn_crear_llista" > CREAR LLISTA</button>
-<!--<button id="btn_crear_musica" > CREAR </button>-->
+    <button id="btn_crear_llista"> CREAR LLISTA</button>
     
-    <button onclick="afegirEtiquete()"> AFEGIR </button>
-    <button onclick="eliminarEtiquete()"> ELIMINAR </button>
+    <button id="btn_afegir_etiqueta"> AFEGIR ETIQUETA </button>
+    <button id="btn_eliminar_etiqueta"> ELIMINAR ETIQUETA </button>
 
     <div id="div_llista_musiques"></div>
-
 </body>
 </html>
