para añadir canciones

--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -14,5 +14,12 @@
     <button id="btn_eliminar_etiqueta"> ELIMINAR ETIQUETA </button>
 
     <div id="div_llista_musiques"></div>
+
+    <br><br>
+    Selecciona canción para añadir: 
+    <select id="select_musica_disponible"></select>
+    <hr>
+    <div id="div_llista_musiques"></div>
+
 </body>
 </html>
