añadir etiquetas 3er cambio añadido

--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -13,12 +13,10 @@
     <button id="btn_afegir_etiqueta"> AFEGIR ETIQUETA </button>
     <button id="btn_eliminar_etiqueta"> ELIMINAR ETIQUETA </button>
 
-    <div id="div_llista_musiques"></div>
-
     <br><br>
-    Selecciona canción para añadir: 
-    <select id="select_musica_disponible"></select>
+    Canción a añadir: <select id="select_musica_disponible"></select>
     <hr>
+
     <div id="div_llista_musiques"></div>
 
 </body>
