--- a/practica4/Ex2/reproductor.html
+++ b/practica4/Ex2/reproductor.html
@@ -11,13 +11,12 @@
     Nova llista: <input type="text" id="input_nomLlista"> 
     <button id="btn_crear_llista"> CREAR LLISTA</button>
 
-    <br><br>
-    Cançó a afegir: <select id="select_musica_disponible"></select>
-    
     <hr>
     <h3>Filtre</h3>
-    Filtrar llistes per etiqueta: <input type="text" id="input_filtre" placeholder="Escriu una etiqueta...">
-    <button id="btn_filtrar">FILTRAR</button>
+    Filtrar llistes per etiqueta: 
+    <select id="select_filtre">
+        <option value="">-- Totes les etiquetes --</option>
+    </select>
     <button id="btn_netejar_filtre">MOSTRAR TOTES</button>
     <hr>
 
